--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Duc Nguyen DUONG
 Maxime VEMCLEFS
 
+Le projet consiste à coder un puzzle de Mondrian
+
+
 Compiler avec la commande make puis exécuter le fichier mondrian.
